# EasyEvo2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  easyevo2-docker  easyevo2.pyz  pyproject.toml
.github/workflows/: docker.yml  evo2docker.yml  release.yml
easyevo2/: __init__.py  __main__.py  dataloader.py  embed.py  exon_classifier.py  generate.py  io.py  list_models.py  model.py  score.py  slurm.py  slurm_cli.py  transform.py  utils.py  vep.py
tests/: conftest.py  test_cli.py  test_dataloader.py  test_embed.py  test_evo2.py  test_generate.py  test_io.py  test_model.py  test_probs.py  test_slurm.py  test_utils.py  test_vep.py
